Refactored jsp, fixed bug (clear hibernate cache Restaurant.class)